--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/windows,unity,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,unity,git
 
@@ -136,5 +135,6 @@ fmod_editor.log
 
 # FMOD 1.10.x (Legacy)
 /Assets/FMODAssets/*
+/Assets/FMODStudioCache.meta
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,unity,git
