--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ fmod_editor.log
 /Assets/FMODStudioCache.meta
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,unity,git
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
